# tyuiu-ml-api

./: .env  .gitignore  Readme.md  main.py  pyproject.toml  requirements.txt
models/: label_binarizer.joblib
notebooks/: label_binarizer.joblib  label_encoder.joblib  logistic_regression.ipynb  one_hot_encoder.joblib  perceptron.ipynb  preprocessing.ipynb  process_data.ipynb  random_forrest.ipynb  standard_scaler.joblib
src/: config.py
src/api_v1/: app.py  container.py  lifespan.py
src/api_v1/providers/: __init__.py  model_service.py
src/api_v1/routers/: __init__.py  model.py  prediction.py
src/misc/: converters.py
src/ml/: utils.py
src/ml/base/: __init__.py  classifier.py  transformer.py
src/ml/models/: __init__.py  classifier.py  label_encoder.py  one_hot_encoder.py  standard_scaler.py
src/ml/pipeline/: __init__.py  classifier.py  transformer.py
src/model/: __init__.py  model.py  model_provider.py  transformer.py
src/model/base/: __init__.py
src/model/classifiers/: __init__.py  classifier.py
src/model/encoders/: __init__.py  label_binarizer.py  label_encoder.py  one_hot_encoder.py
src/model/estimators/: __init__.py  classifier.py  label_binarizer.py  one_hot_encoder.py  standard_scaler.py
src/model/pipelines/: __init__.py  base.py  model.py  transformer.py
src/model/scalers/: __init__.py
src/repository/: prediction.py
src/s3/: bucket.py  client.py
src/schemas/: __init__.py  applicant.py
src/services/: __init__.py  model.py
trained_models/: label-encoder.joblib  one-hot-encoder.joblib  standard-scaler.joblib
