[tool.poetry]
name = "tyuiubinclfapi"
version = "0.1.0"
description = ""
authors = ["AndreyKosov <andrey.kosov.05@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.6"}
scikit-learn = ">=1.5.2,<1.6.0"
pandas = ">=2.2.3,<2.3.0"
dill = ">=0.3.9,<0.4.0"
aiobotocore = ">=2.16.1,<2.17.0"
aiofiles = "^24.1.0"
dishka = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
